# OCR

./: CMakeLists.txt  ReadMe.md  package.xml
src/: classification_test.cpp  classification_test.hpp  train_ocr.cpp  train_ocr.hpp
